<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="profile_image">Profile Image</string>
    <string name="add_button">Add</string>
    <string name="logout">Logout</string>
    <string name="workouts">Workouts</string>
    <string name="recipes">Recipes</string>
    <string name="add_new">Add New</string>
    <string name="add_workout">Add Workout</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="log_progress">Log Progress</string>
    <string name="camera_scan">Camera Scan</string>
    <string name="find_gym">Find Gym</string>
    <string name="return_to_main">Return to Main</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_account">Register Account</string>
    <string name="full_name">Full Name</string>
    <string name="workout_title">Workout Title</string>
    <string name="duration_exercises">Duration • Exercises</string>
    <string name="favorite_workouts">Favorite Workouts</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="popular_exercises">Popular Exercises</string>



    <string-array name="quotes">
        <item>“Discipline beats motivation.”</item>
        <item>“Small progress is still progress.”</item>
        <item>“Push harder than yesterday.”</item>
        <item>“Your only limit is you.”</item>
        <item>“It never gets easier, you just get stronger.”</item>
    </string-array>

</resources>
